kubernetes-modules/kubernetes-spring/serviceDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    creationTimestamp: null
    labels:
        app: demo
    name: demo
spec:
    replicas: 1
    selector:
        matchLabels:
            app: demo
    strategy: { }
    template:
        metadata:
            creationTimestamp: null
            labels:
                app: demo
        spec:
            containers:
                -   image: docker.io/library/kubernetes-spring:1.0.0
                    name: demo
                    resources: { }
                    imagePullPolicy: Never

status: { }
