kubernetes-modules/kubernetes-spring/clusterIp.yaml
apiVersion: v1
kind: Service
metadata:
    creationTimestamp: null
    labels:
        app: demo
    name: demo
spec:
    ports:
        -   name: 8080-8080
            port: 8080
            protocol: TCP
            targetPort: 8080
    selector:
        app: demo
    type: ClusterIP
status:
    loadBalancer: { }
